helm_charts/helm_charts,/helm_charts/servicex.server/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicex-web  
  namespace: servicex
  labels:
    k8s-app: servicex-web
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: servicex-web
  template:
    metadata:
      labels:
        k8s-app: servicex-web
    spec:
      containers:
      - name: servicex
        image: sslhep/servicex-server:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /web/healthz
            port: 80
          periodSeconds: 60
          initialDelaySeconds: 60
          timeoutSeconds: 10
        volumeMounts:
        - name: globus-conf-volume
          mountPath: "/etc/globus-conf/"
        - name: frontend-conf-volume
          mountPath: "/usr/src/app/config/"
      volumes:
      - name: frontend-conf-volume
        secret:
          secretName: config
          items:
          - key: conf
            path: config.json      
      - name: globus-conf-volume
        secret:
          secretName: globus-secret
          items:
          - key: gconf
            path: globus-config.json
