helm_charts/helm_charts,/helm_charts/servicex.server/kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: servicex
  namespace: servicex
  annotations:
    external-dns.alpha.kubernetes.io/hostname: servicex.slateci.net
  labels:
    k8s-app: servicex
spec:
  type: LoadBalancer
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    k8s-app: servicex
